--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "dependencies": {
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
+    "@loadable/component": "^5.13.1",
     "babel-plugin-styled-components": "^1.10.7",
+    "framer-motion": "^2.1.4",
     "gatsby": "^2.23.12",
     "gatsby-image": "^2.4.9",
     "gatsby-plugin-emotion": "^4.3.10",
@@ -18,10 +20,15 @@
     "gatsby-plugin-styled-components": "^3.3.10",
     "gatsby-source-filesystem": "^2.3.14",
     "gatsby-transformer-sharp": "^2.5.7",
+    "gh-pages": "^3.1.0",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
+    "react": "^16.13.1",
+    "react-awesome-styled-grid": "^3.0.10",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
+    "react-icons": "^3.10.0",
+    "react-switch": "^5.0.1",
+    "simple-json-fetch": "^1.0.1",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
